--- a/static/editor_index.html
+++ b/static/editor_index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script>
+      window.silver_editor.hello_from_second_page();
+    </script>
+  </head>
 
-<head>
-	<script>
-		window.silver_editor.hello_from_second_page()
-	</script>
-</head>
-
-<body>
-	<h1>Hello world!</h1>
-</body>
-
+  <body>
+    <h1>Hello world!</h1>
+    <input
+      type="color"
+      onchange="silver_editor.process_color_event(this.value)"
+    />
+  </body>
 </html>
