--- a/static/editor_index.html
+++ b/static/editor_index.html
@@ -6,11 +6,14 @@
     </script>
   </head>
 
-  <body>
+  <body id="react_handle">
     <h1>Hello world!</h1>
     <input
       type="color"
       onchange="silver_editor.process_color_event(this.value)"
     />
+    <script>
+      window.silver_editor.render_editor(window);
+    </script>
   </body>
 </html>
